--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div class="about-grid">
 
         <div class="about-photo">
-            <img src="rada.jpeg" alt="Rada Aubakirova">
+            <img src="rada.jpg" alt="Rada Aubakirova">
         </div>
 
         <div class="about-content">
