--- a/index.html
+++ b/index.html
@@ -169,16 +169,24 @@
     <div class="about-grid">
 
         <div class="about-photo">
-            <img src="rada.jpg" alt="Rada Aubakirova">
+            <img src="rada.jpeg" alt="Rada Aubakirova">
         </div>
 
         <div class="about-content">
             <h2>Рада Аубакирова</h2>
             <p class="about-sub">Основатель международной школы терапевтического вокала</p>
 
-            <p class="about-text">30 лет опыта работы с голосом, телом и психикой. Тысячи учеников прошли путь трансформации — от скованности до свободы голоса и уверенности на сцене.</p>
+            <p class="about-text">Певица, композитор, режиссёр, психолог и трансформационный педагог.</p>
 
-            <p class="about-text">Автор уникального подхода, объединяющего вокал, психологию и телесные практики. Рада развивает педагогов по всему миру и обучает трансформационному вокалу.</p>
+            <p class="about-text">Аубакирова Рада Сергеевна — жена и мама четырёх детей. Дипломированный психолог-сексолог, коуч ICU, ментор-наставник с более чем 10-летним консультативным опытом.</p>
+
+            <p class="about-text">Создала собственный подход, объединивший вокал, психологию, телесные практики и работу с эмоциональными блоками. Разработала и запатентовала уникальную методику «Терапевтический вокал», трансформирующую голос, состояние и внутреннюю свободу человека.</p>
+
+            <p class="about-text">Более 2000 учеников по всему миру прошли через обучение под её руководством — от тех, кто никогда не пел, до профессиональных артистов, педагогов, спикеров и терапевтов.</p>
+
+            <p class="about-text">Рада — певица и автор песен, призёр и лауреат международных конкурсов, режиссёр и организатор творческих мероприятий. Продюсер двух музыкальных групп и основатель творческой школы «Касиетті».</p>
+
+            <p class="about-text">Её миссия — раскрывать голос как источник силы, уверенности и самореализации. Голос, который лечит. Голос, который звучит свободно.</p>
         </div>
 
     </div>
