change text голос ваше оружие

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <!-- Основной текст -->
     <div class="hero-content">
         <h1 class="hero-title">
-            <span class="title-glow">Путь к вашему настоящему голосу,</span><br>
-            <span class="title-glow">свободе и силе звучания</span>
+            <span class="title-glow">Раскрой свой настоящий голос,</span><br>
+            <span class="title-glow">Сила. Свобода. Настоящая природа звучания</span>
         </h1>
         <p class="hero-subtitle">
-            <i class="fas fa-volume-up"></i> Голос, который услышат. Уверенность. Сцена. Признание.
+            <i class="fas fa-volume-up"></i> Ваш голос — ваше оружие. Научитесь владеть им свободно.
         </p>
 
         <div class="hero-buttons">
