style.css fix to increas gap after logo

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
 
 <!-- ======================= HERO ======================= -->
 <section class="hero">
-
+    
     <!-- Вращающийся логотип -->
     <img src="/logo.png" class="hero-logo-bg rotating-logo" alt="Logo Background">
     <div class="logo-text-hint">Кликни для ускорения вращения</div>
+    <div class="hero-spacer"></div>
 
     <!-- Золотой туман -->
     <div class="gold-mist"></div>
