index&styles gener  partches by deepsk

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         <nav class="rv-nav">
             <a href="#courses"><i class="fas fa-graduation-cap"></i> Курсы</a>
+            <a href="#practices"><i class="fas fa-spa"></i> Практики</a>
             <a href="#about"><i class="fas fa-user"></i> О Раде</a>
             <a href="#games"><i class="fas fa-gamepad"></i> Игры</a>
             <a href="#faq"><i class="fas fa-question-circle"></i> FAQ</a>
@@ -41,6 +42,7 @@
 
     <div class="rv-mobile-menu" id="mobileNav">
         <a href="#courses"><i class="fas fa-graduation-cap"></i> Курсы</a>
+        <a href="#practices"><i class="fas fa-spa"></i> Практики</a>
         <a href="#about"><i class="fas fa-user"></i> О Раде</a>
         <a href="#games"><i class="fas fa-gamepad"></i> Игры</a>
         <a href="#faq"><i class="fas fa-question-circle"></i> FAQ</a>
@@ -196,6 +198,51 @@
             </button>
         </div>
     </div>
+</section>
+
+<!-- ======================= PRACTICES ======================= -->
+<section id="practices" class="practices">
+
+  <h2 class="section-title">
+    <i class="fas fa-spa"></i> Глубинные практики
+  </h2>
+  <p class="section-lead">
+    Голос, осознанность и внутренняя трансформация
+  </p>
+
+  <div class="practices-grid">
+
+    <div class="practice-card">
+      <h3>Терапевтический вокал</h3>
+      <p class="practice-sub">Голос как путь к себе</p>
+
+      <p>
+        Мягкая и глубокая практика работы с голосом, телом и эмоциями.
+        Через дыхание и осознанное пение снимаются внутренние зажимы,
+        появляется уверенность и контакт с собой.
+      </p>
+
+      <p class="practice-meta">
+        Формат: индивидуально или в группе · 6 недель
+      </p>
+    </div>
+
+    <div class="practice-card">
+      <h3>Игра «Мелодия Души»</h3>
+      <p class="practice-sub">Тонкий диалог с собой</p>
+
+      <p>
+        Бережная трансформационная игра на основе метафорических карт
+        и глубоких вопросов. Помогает услышать свои истинные чувства
+        и найти внутренние опоры.
+      </p>
+
+      <p class="practice-meta">
+        Для личного прохождения и профессиональной практики
+      </p>
+    </div>
+
+  </div>
 </section>
 
 
