index*styles new vs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <nav class="rv-nav">
             <a href="#courses"><i class="fas fa-graduation-cap"></i> Курсы</a>
-            <a href="#practices"><i class="fas fa-spa"></i> Практики</a>
+            <a href="#practices"><i class="fas fa-spa"></i> Методика</a>
             <a href="#about"><i class="fas fa-user"></i> О Раде</a>
             <a href="#games"><i class="fas fa-gamepad"></i> Игры</a>
             <a href="#faq"><i class="fas fa-question-circle"></i> FAQ</a>
@@ -42,7 +42,7 @@
 
     <div class="rv-mobile-menu" id="mobileNav">
         <a href="#courses"><i class="fas fa-graduation-cap"></i> Курсы</a>
-        <a href="#practices"><i class="fas fa-spa"></i> Практики</a>
+        <a href="#practices"><i class="fas fa-spa"></i> Методика</a>
         <a href="#about"><i class="fas fa-user"></i> О Раде</a>
         <a href="#games"><i class="fas fa-gamepad"></i> Игры</a>
         <a href="#faq"><i class="fas fa-question-circle"></i> FAQ</a>
@@ -103,6 +103,38 @@
     </div>
 </section>
 
+<!-- ======================= ABOUT RADA ======================= -->
+<section id="about" class="about-rada">
+    <div class="about-grid">
+        <div class="about-photo">
+            <img src="rada.jpg" alt="Rada Aubakirova">
+            <div class="about-photo-glow"></div>
+        </div>
+
+        <div class="about-content">
+            <h2>
+                <i class="fas fa-user-circle"></i> Рада Аубакирова
+            </h2>
+            <p class="about-sub">
+                <i class="fas fa-rocket"></i> Основатель международной школы терапевтического вокала
+            </p>
+
+            <div class="about-badges">
+                <span><i class="fas fa-music"></i> Певица</span>
+                <span><i class="fas fa-brain"></i> Психолог</span>
+                <span><i class="fas fa-graduation-cap"></i> Педагог</span>
+                <span><i class="fas fa-heart"></i> Мать 4 детей</span>
+            </div>
+
+            <p class="about-text">Певица, композитор, режиссёр, психолог и трансформационный педагог.</p>
+            <p class="about-text">Аубакирова Рада Сергеевна — жена и мама четырёх детей. Дипломированный психолог-сексолог, коуч ICU, ментор-наставник с более чем 10-летним консультативным опытом.</p>
+            <p class="about-text">Создала собственный подход, объединивший вокал, психологию, телесные практики и работу с эмоциональными блоками. Разработала и запатентовала уникальную методику «Терапевтический вокал», трансформирующую голос, состояние и внутреннюю свободу человека.</p>
+            <p class="about-text">Более 2000 учеников по всему миру прошли через обучение под её руководством — от тех, кто никогда не пел, до профессиональных артистов, педагогов, спикеров и терапевтов.</p>
+            <p class="about-text">Рада — певица и автор песен, призёр и лауреат международных конкурсов, режиссёр и организатор творческих мероприятий. Продюсер двух музыкальных групп и основатель творческой школы «Касиетті».</p>
+            <p class="about-text">Её миссия — раскрывать голос как источник силы, уверенности и самореализации. Голос, который лечит. Голос, который звучит свободно.</p>
+        </div>
+    </div>
+</section>
 
 <!-- ======================= WHY ======================= -->
 <section class="why-choose">
@@ -146,6 +178,77 @@
     </div>
 </section>
 
+<!-- ======================= PRACTICES ======================= -->
+<section id="practices" class="practices">
+
+  <h2 class="section-title">
+    <i class="fas fa-spa"></i> Глубинные техники
+  </h2>
+
+  <p class="section-lead">
+    Авторские практики, соединяющие голос, тело, эмоции и осознанность
+  </p>
+
+  <div class="practices-grid">
+
+    <!-- ===== ТЕРАПЕВТИЧЕСКИЙ ВОКАЛ ===== -->
+    <div class="practice-card">
+
+      <h3 class="practice-title">Терапевтический вокал</h3>
+      <p class="practice-sub">Голос как инструмент внутренней трансформации</p>
+
+      <p>
+        Терапевтический вокал — это глубинная практика,
+        направленная не только на развитие голоса,
+        но и на освобождение человека от телесных,
+        эмоциональных и психических зажимов.
+      </p>
+
+      <p>
+        Работа начинается с дыхания и тела,
+        постепенно раскрывая способность чувствовать,
+        выражать эмоции и звучать свободно —
+        без страха, напряжения и внутренних ограничений.
+      </p>
+
+      <p>
+        Метод помогает восстановить контакт с собой,
+        повысить уверенность, навык самопрезентации
+        и научиться экологично проявляться в жизни и на сцене.
+      </p>
+
+    </div>
+
+    <!-- ===== МЕЛОДИЯ ДУШИ ===== -->
+    <div class="practice-card">
+
+      <h3 class="practice-title">Игра «Мелодия Души»</h3>
+      <p class="practice-sub">Настройка внутреннего звучания</p>
+
+      <p>
+        «Мелодия Души» — это трансформационная игра,
+        основанная на метафорических картах,
+        коучинговых вопросах и практике саморефлексии.
+      </p>
+
+      <p>
+        В процессе игры человек проходит путь
+        от внутреннего запроса к осознанию,
+        формируя личную «мелодию» —
+        понимание своих истинных чувств,
+        состояний и жизненных ориентиров.
+      </p>
+
+      <p>
+        Практика подходит как для личного прохождения,
+        так и для профессиональной работы
+        психологов, коучей и игропрактиков.
+      </p>
+
+    </div>
+
+  </div>
+</section>
 
 <!-- ======================= COURSES ======================= -->
 <section id="courses" class="courses">
@@ -199,86 +302,6 @@
         </div>
     </div>
 </section>
-
-<!-- ======================= PRACTICES ======================= -->
-<section id="practices" class="practices">
-
-  <h2 class="section-title">
-    <i class="fas fa-spa"></i> Глубинные практики
-  </h2>
-  <p class="section-lead">
-    Голос, осознанность и внутренняя трансформация
-  </p>
-
-  <div class="practices-grid">
-
-    <div class="practice-card">
-      <h3>Терапевтический вокал</h3>
-      <p class="practice-sub">Голос как путь к себе</p>
-
-      <p>
-        Мягкая и глубокая практика работы с голосом, телом и эмоциями.
-        Через дыхание и осознанное пение снимаются внутренние зажимы,
-        появляется уверенность и контакт с собой.
-      </p>
-
-      <p class="practice-meta">
-        Формат: индивидуально или в группе · 6 недель
-      </p>
-    </div>
-
-    <div class="practice-card">
-      <h3>Игра «Мелодия Души»</h3>
-      <p class="practice-sub">Тонкий диалог с собой</p>
-
-      <p>
-        Бережная трансформационная игра на основе метафорических карт
-        и глубоких вопросов. Помогает услышать свои истинные чувства
-        и найти внутренние опоры.
-      </p>
-
-      <p class="practice-meta">
-        Для личного прохождения и профессиональной практики
-      </p>
-    </div>
-
-  </div>
-</section>
-
-
-<!-- ======================= ABOUT RADA ======================= -->
-<section id="about" class="about-rada">
-    <div class="about-grid">
-        <div class="about-photo">
-            <img src="rada.jpg" alt="Rada Aubakirova">
-            <div class="about-photo-glow"></div>
-        </div>
-
-        <div class="about-content">
-            <h2>
-                <i class="fas fa-user-circle"></i> Рада Аубакирова
-            </h2>
-            <p class="about-sub">
-                <i class="fas fa-rocket"></i> Основатель международной школы терапевтического вокала
-            </p>
-
-            <div class="about-badges">
-                <span><i class="fas fa-music"></i> Певица</span>
-                <span><i class="fas fa-brain"></i> Психолог</span>
-                <span><i class="fas fa-graduation-cap"></i> Педагог</span>
-                <span><i class="fas fa-heart"></i> Мать 4 детей</span>
-            </div>
-
-            <p class="about-text">Певица, композитор, режиссёр, психолог и трансформационный педагог.</p>
-            <p class="about-text">Аубакирова Рада Сергеевна — жена и мама четырёх детей. Дипломированный психолог-сексолог, коуч ICU, ментор-наставник с более чем 10-летним консультативным опытом.</p>
-            <p class="about-text">Создала собственный подход, объединивший вокал, психологию, телесные практики и работу с эмоциональными блоками. Разработала и запатентовала уникальную методику «Терапевтический вокал», трансформирующую голос, состояние и внутреннюю свободу человека.</p>
-            <p class="about-text">Более 2000 учеников по всему миру прошли через обучение под её руководством — от тех, кто никогда не пел, до профессиональных артистов, педагогов, спикеров и терапевтов.</p>
-            <p class="about-text">Рада — певица и автор песен, призёр и лауреат международных конкурсов, режиссёр и организатор творческих мероприятий. Продюсер двух музыкальных групп и основатель творческой школы «Касиетті».</p>
-            <p class="about-text">Её миссия — раскрывать голос как источник силы, уверенности и самореализации. Голос, который лечит. Голос, который звучит свободно.</p>
-        </div>
-    </div>
-</section>
-
 
 <!-- ======================= GAMES ======================= -->
 <section id="games" class="games">
