new vs index&styles

--- a/index.html
+++ b/index.html
@@ -136,6 +136,84 @@
     </div>
 </section>
 
+<!-- ======================= METHOD ======================= -->
+<section id="method" class="method">
+  <h2 class="section-title center">
+    <i class="fas fa-spa"></i> Методика терапевтического вокала
+  </h2>
+
+  <p class="section-lead">
+    Глубинная работа с голосом, телом и психоэмоциональным состоянием
+  </p>
+
+  <div class="method-grid">
+    <div class="method-item">
+      <h3>Работа с телом и дыханием</h3>
+      <p>
+        Снятие телесных зажимов, восстановление дыхания и возвращение
+        контакта с телом как с источником опоры и безопасности.
+      </p>
+    </div>
+
+    <div class="method-item">
+      <h3>Эмоциональная и психологическая проработка</h3>
+      <p>
+        Экологичное высвобождение подавленных эмоций, работа с внутренними
+        конфликтами, страхами и ограничивающими установками.
+      </p>
+    </div>
+
+    <div class="method-item">
+      <h3>Голос как инструмент самопрезентации</h3>
+      <p>
+        Формирование уверенной речи, способности звучать,
+        проявляться и доносить себя миру без напряжения.
+      </p>
+    </div>
+
+    <div class="method-item">
+      <h3>Вокал как интеграция</h3>
+      <p>
+        Пение становится способом принятия себя,
+        проживания чувств и закрепления внутренних изменений.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ======================= REVIEWS ======================= -->
+<section id="reviews" class="reviews">
+  <h2 class="section-title center">
+    <i class="fas fa-heart"></i> Отзывы учеников
+  </h2>
+
+  <div class="reviews-grid">
+    <div class="review-card">
+      <p>
+        «Я пришла за вокалом, а получила внутреннюю опору.
+        Я приняла свой голос и перестала бояться проявляться».
+      </p>
+      <span>— Жазгуль</span>
+    </div>
+
+    <div class="review-card">
+      <p>
+        «Процесс был глубоким и бережным.
+        Я научилась слышать себя и звучать свободно».
+      </p>
+      <span>— Лаура</span>
+    </div>
+
+    <div class="review-card">
+      <p>
+        «Это не просто обучение вокалу.
+        Это трансформация личности и состояния».
+      </p>
+      <span>— Анонимно</span>
+    </div>
+  </div>
+</section>
+
 <!-- ======================= WHY ======================= -->
 <section class="why-choose">
     <h2 class="section-title">
